# dateframe

./: .gitignore  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  SECURITY.md  capture_dates.py  copy_icloud.py  copy_icloud_config.py  dateframe_cli.py  list_extensions.py  media_common.py  media_logging.py  metadata_writer.py  pyproject.toml  read_metadata.py  rename_media.py  requirements-dev.txt  requirements.txt  windows_metadata.py  write_dates.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: tests.yml
docs/: USER-GUIDE.md
media_tools/: __init__.py  capture_dates.py  copy_icloud_config.py  media_common.py  media_logging.py  metadata_writer.py  windows_metadata.py
tests/: test_capture_dates.py  test_copy_icloud.py  test_dateframe_cli.py  test_logging_checkpoints.py  test_media_common.py  test_media_logging.py  test_read_metadata.py  test_rename_media.py  test_write_dates.py
